--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <main>
             <div class="current-weather">
                 <div>
-                    <h1 class="weather-city" id="weather-city">Paris</h1>
+                    <h1 class="city" id="city"></h1>
                 </div>
 
                 <p>
@@ -33,7 +33,7 @@
                     Humidity: <span class="temperature-1">87%</span>, Wind:
                     <span class="temperature-1">7.2km/h</span>
                 </p>
-                <div class="roboto-black">☀️14°C</div>
+                <div class="temperature" id="temperature">☀️°C</div>
             </div>
         </main>
         <footer>
