--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
                 </div>
 
                 <p>
-                    Saturday 15:32, moderate rain <br />
-                    Humidity: <span class="temperature-1">87%</span>, Wind:
-                    <span class="temperature-1">7.2km/h</span>
+                   <span class="time" id="time" > , </span> <span class="description"id="description"></span> </span> <br />
+                    Humidity: <span class="humidity"id="humidity"></span>, Wind:
+                    <span class="wind-speed"id="wind-speed"></span>
                 </p>
                 <div class="temperature" id="temperature">☀️°C</div>
             </div>
