Added an icon to my weather data and updated my CSS

--- a/index.html
+++ b/index.html
@@ -29,11 +29,17 @@
                 </div>
 
                 <p>
-                   <span class="time" id="time" > , </span> <span class="description"id="description"></span> </span> <br />
+                   <span class="time" id="time" > </span> <span class="description"id="description"></span> </span> <br />
                     Humidity: <span class="humidity"id="humidity"></span>, Wind:
                     <span class="wind-speed"id="wind-speed"></span>
                 </p>
-                <div class="temperature" id="temperature">☀️°C</div>
+                <div class="weather-app-container">
+                <div class="icon" id="icon">
+                </div>
+                <div class="temperature" id="temperature"> 
+                    </div>
+                    
+                </div>
             </div>
         </main>
         <footer>
