Added a link on the footer

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <footer>
             <p>
                 This project was coded by
-                <a href="#" target="_blank" class="coded-by">Delicate Matsilele</a>
+                <a href="https://github.com/" target="_blank" class="coded-by">Delicate Matsilele</a>
                 and is <a href="#" target="_blank" class="coded-by"> on GitHub</a> and
                 <a href="#" target="_blank" class="coded-by">hosted on Netlify</a>
             </p>
