Added github and netlify links on the footer

--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
             <p>
                 This project was coded by
                 <a href="https://github.com/" target="_blank" class="coded-by">Delicate Matsilele</a>
-                and is <a href="#" target="_blank" class="coded-by"> on GitHub</a> and
-                <a href="#" target="_blank" class="coded-by">hosted on Netlify</a>
+                and is <a href="https://github.com/DelicateM/isimo-sezulu-by-Delicate" target="_blank" class="coded-by"> on GitHub</a> and
+                <a href="https://isimo-se-zulu.netlify.app/" target="_blank" class="coded-by">hosted on Netlify</a>
             </p>
         </footer>
     </div>
